# ferrules

./: .dockerignore  .env  .gitignore  .rustfmt.toml  API.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.osx  README.md  ROADMAP.md  build.rs  dist-workspace.toml  docker-compose.yml  test_ligature.rs
.cargo/: config.toml
.github/: README.md
.github/workflows/: build-ferrules.yml  release.yml
benches/: layout.rs  ocr_mac.rs  onnx_multithreaded.rs
ferrules/: test_ligature.rs
ferrules-api/: Cargo.toml
ferrules-api/src/: lib.rs  main.rs
ferrules-cli/: Cargo.toml
ferrules-cli/src/: main.rs
ferrules-core/: Cargo.toml  build.rs
ferrules-core/benches/: layout.rs  ocr_mac.rs  onnx_batch.rs  onnx_multithreaded.rs
ferrules-core/src/: blocks.rs  draw.rs  entities.rs  lib.rs  utils.rs
ferrules-core/src/layout/: mod.rs  model.rs
ferrules-core/src/ocr/: mod.rs
ferrules-core/src/parse/: document.rs  merge.rs  mod.rs  native.rs  page.rs  titles.rs
ferrules-core/src/render/: html.rs  markdown.rs  mod.rs
libs/: build_libpdfium_linux.sh  install_pdfium.sh  pdfium.tgz
libs/pdfium-dyn-arm64-v6694/: PDFiumConfig.cmake
libs/pdfium-linux-x86-134.0/: PDFiumConfig.cmake  args.gn
python/: convert_fp16.py  infer.py  infer_onnx.py  infer_onnx_fp16.py  parse_pdftext.py  requirements.txt  yolo_to_onnx.py
scripts/: send_par_req.py  send_req.sh
src/: blocks.rs  draw.rs  entities.rs  lib.rs  main.rs  parse.rs
src/detection/: mod.rs  model.rs
src/layout/: draw.rs  mod.rs  model.rs  nms.rs
src/ocr/: apple_vision.rs  mod.rs
src/parse/: document.rs  mod.rs  native.rs  page.rs
