[workspace]
members = ["ferrules-core", "ferrules-cli", "ferrules-api"]
resolver = "2"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
uuid = { version = "1.11.0", features = ["v4"] }
memmap2 = "0.9.5"
