[workspace]
members = ["ferrules-core", "ferrules-cli", "ferrules-api"]
resolver = "2"
edition = "2021"

[workspace.dependencies]
tracing = { version = "0.1.41", features = ["attributes"] }
anyhow = "1.0.95"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "registry",
] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
uuid = { version = "1.11.0", features = ["v4"] }
memmap2 = "0.9.5"
clap = { version = "4.5.23", features = ["derive", "env"] }

[profile.release]
strip = "symbols"
opt-level = 3
# debug = 1

[profile.dist]
inherits = "release"
lto = "thin"
