[package]
name = "ferrules-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
memmap2 = { workspace = true }
ferrules-core = { path = "../ferrules-core" }
tower-http = { version = "0.6.1", features = ["trace", "limit"] }
tempfile = "3.16.0"
