[package]
name = "ferrules"
version = "0.1.6"
edition = "2021"
authors = ["Amine dirhoussi <aminedirhoussi1@gmail.com>"]
description = "Modern, fast, document parser written in 🦀"
repository = "https://github.com/aminediro/ferrules"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
memmap2 = { workspace = true }

# CLI specific
ferrules-core = { path = "../ferrules-core" }
clap = { workspace = true }
indicatif = "0.17.9"
