[package]
name = "ferrules-core"
version = "0.1.3"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
itertools = "0.14.0"
futures = "0.3.31"
colored = "3.0.0"
dirs = "6.0.0"
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# pdf reader
imageproc = "0.25.0"
ab_glyph = "0.2.29"
pdfium-render = { version = "0.8.27", features = [
    "static",
    "bindings",
    "sync",
] }
# Inference
image = "0.25.5"
ndarray = "0.16.1"
plsfix = "0.1.7"
ort = { version = "=2.0.0-rc.9", features = ["fetch-models"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.9", features = ["coreml", "fetch-models"] }
objc2 = { version = "^0.5.2" }
objc2-foundation = { version = "^0.2.2" }
objc2-vision = { version = "^0.2.2", features = [
    "VNRequest",
    "VNRequestHandler",
    "VNRecognizeTextRequest",
    # Getting results
    "VNObservation",
    "VNTypes",
] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.9", features = [
    "fetch-models",
    "half",
    "cuda",
    "tensorrt",
    "load-dynamic",
] }

[dev-dependencies]
rand = "0.8.5"
rayon = "1.10.0"
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "onnx_batch"
harness = false

[profile.release]
# strip = "symbols"
opt-level = 3
debug = 1

[profile.dist]
inherits = "release"
lto = "thin"
